syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";

service Chat {
  rpc GetMessages (RoomRequest) returns (MessageList) {
    option (google.api.http) = {
        get: "/chat/{workspaceId}/messages"
    };
  }
  rpc SendMessage (MessageRequest) returns (Empty) {
    option (google.api.http) = {
        post: "/chat/{workspaceId}/messages"
        body: "*"
    };
  }
  rpc UpdateMessage (UpdateMessageRequest) returns (Empty) {
    option (google.api.http) = {
        put: "/chat/{workspaceId}/messages/{id}"
        body: "*"
    };
  }
  rpc DeleteMessage (DeleteMessageRequest) returns (Empty) {
    option (google.api.http) = {
        delete: "/chat/{workspaceId}/messages/{id}"
    };
  }
  rpc ReceiveMessages (RoomRequest) returns (stream ReceiveMessageResponse) {
    option (google.api.http) = {
        post: "/chat/{workspaceId}/receive"
    };
  }
}

message Empty {}

message Message {
    string id = 1;
    string userId = 2;
    int32 workspaceId = 3;
    string text = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updatedAt = 6;
}

message MessageRequest {
    string userId = 1;
    int32 workspaceId = 2;
    string text = 3;
}

message RoomRequest {
    int32 workspaceId = 2;
}

message MessageList {
    repeated Message messages = 1;
}

message UpdateMessageRequest {
    string id = 1;
    string text = 2;
}

message DeleteMessageRequest {
    string id = 1;
}

message ReceiveMessageResponse {
    Message message = 1;
    MessageAction action = 2;
}

enum MessageAction {
    CREATE = 0;
    UPDATE = 1;
    DELETE = 2;
}